tests/corpus/snapshots/number-to-string-1-run.snap
---
source: src/test/corpus.rs
expression: fixture
---
{
  "status": "terminated",
  "steps": 347,
  "d": [
    "$9",
    "$2",
    "$0",
    "$31",
    "$0",
    "$0",
    "$0",
    "$0"
  ],
  "a": [
    "$0",
    "$2011",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$1000000"
  ],
  "pc": "$102c",
  "flags": "X:0 N:0 Z:0 V:0 C:0",
  "output": "BEEF\n48879\n1011111011101111\n",
  "memory": "d3f70e91d49b39e5"
}
