tests/corpus/snapshots/reverse-a-string-1-run.snap
---
source: src/test/corpus.rs
expression: fixture
---
{
  "status": "terminated",
  "steps": 55,
  "d": [
    "$65",
    "$6d",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0"
  ],
  "a": [
    "$2004",
    "$2003",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$1000000"
  ],
  "pc": "$1034",
  "flags": "X:0 N:1 Z:0 V:0 C:1",
  "output": "",
  "memory": "3c88ba6a80b6d09e"
}
