tests/corpus/snapshots/reverse-a-string-1.snap
---
source: src/test/corpus.rs
expression: fixture
---
{
  "entry": "$1000",
  "instructions": [
    {
      "address": "$1000",
      "line": 0,
      "text": "lea $2000,a0"
    },
    {
      "address": "$1004",
      "line": 1,
      "text": "movea.l a0,a1"
    },
    {
      "address": "$1008",
      "line": 3,
      "text": "tst.b (a1)+"
    },
    {
      "address": "$100c",
      "line": 4,
      "text": "bne $1008"
    },
    {
      "address": "$1010",
      "line": 5,
      "text": "subq.l #$2,a1"
    },
    {
      "address": "$1014",
      "line": 7,
      "text": "cmpa.l a0,a1"
    },
    {
      "address": "$1018",
      "line": 8,
      "text": "bls $1034"
    },
    {
      "address": "$101c",
      "line": 9,
      "text": "move.b (a0),d0"
    },
    {
      "address": "$1020",
      "line": 10,
      "text": "move.b (a1),d1"
    },
    {
      "address": "$1024",
      "line": 11,
      "text": "move.b d1,(a0)+"
    },
    {
      "address": "$1028",
      "line": 12,
      "text": "move.b d0,(a1)"
    },
    {
      "address": "$102c",
      "line": 13,
      "text": "subq.l #$1,a1"
    },
    {
      "address": "$1030",
      "line": 14,
      "text": "bra $1014"
    }
  ],
  "memory": [
    {
      "address": "$2000",
      "bytes": "417373656d626c7900"
    }
  ],
  "labels": {
    "done": {
      "address": "$1034",
      "line": 15
    },
    "find_end": {
      "address": "$1008",
      "line": 2
    },
    "swap_loop": {
      "address": "$1014",
      "line": 6
    },
    "text": {
      "address": "$2000",
      "line": 18
    }
  }
}
