tests/corpus/snapshots/string-length-1-run.snap
---
source: src/test/corpus.rs
expression: fixture
---
{
  "status": "terminated",
  "steps": 37,
  "d": [
    "$f",
    "$2000",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0"
  ],
  "a": [
    "$2010",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$1000000"
  ],
  "pc": "$101c",
  "flags": "X:0 N:0 Z:0 V:0 C:0",
  "output": "",
  "memory": "f929474e9c102f26"
}
